Add example routes to spec output
